--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = vendor/imgui
 	url = https://github.com/ocornut/imgui.git
     branch = docking
+[submodule "vendor/imgui"]
+	path = vendor/imgui
+	url = https://github.com/ocornut/imgui.git
+	branch = docking
